force-app/main/default/objects/Ballot__c/Ballot__c.object-meta.xml
<CustomObject>
    <label>Ballot</label>
    <nameField>
        <displayFormat>B-{000000}</displayFormat>
        <label>Ballot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ballots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>