force-app/main/default/objects/Ballot__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ballots (Member)</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <type>Lookup</type>
</CustomField>