force-app/main/default/objects/Ballot__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule</label>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Ballots</relationshipLabel>
    <relationshipName>Ballots</relationshipName>
    <type>Lookup</type>
</CustomField>