force-app/main/default/objects/Ballot__c/fields/Vote__c.field-meta.xml
<CustomField>
    <fullName>Vote__c</fullName>
    <formula>TEXT(Category__c) &amp; &quot;: &quot; &amp; Member__r.FirstName &amp; &quot; &quot; &amp; Member__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vote</label>
    <type>Text</type>
</CustomField>