force-app/main/default/objects/Ballot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MeetingDate__c</columns>
    <columns>Category__c</columns>
    <columns>Member__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>